Fix Kickoff context menu actions for System Settings results

BUG: 442522


(cherry picked from commit d150d92e00db607ad15f7723fe3a3420821f75fc)